# MotorAI

./: .gitignore  README.md  Update.txt  motorai_config.py  motorai_settings.example.json  motorai_settings.json
.claude/: settings.local.json
Competition/: candidate_evidence.py  candidate_network_config.py  competition_runner.py  competition_workspace.py  controller_manifest.py  iteration_summary.py  next_round_strategy.py  parameter_seeder.py  round_feedback.py  test_iteration_summary.py
Competition/__pycache__/: competition_workspace.cpython-312.pyc.1383122780320  competition_workspace.cpython-312.pyc.1431336435872  competition_workspace.cpython-312.pyc.2395429663872  controller_manifest.cpython-312.pyc.2531773300896  controller_manifest.cpython-312.pyc.2741872315392
Generate/: README.md  controller_core_structure_exporter.py  controller_loop_id_exporter.py  controller_loop_ids_generated.json  ctl_main.c  ctl_main.h  generate_loop_ids_from_core.py  load.csv  merge_loop_ids_into_ctl_main.py  paras.generated.h  record.json  run_llm_to_program.py  simulink_model.slx
Generate/Example/: Example.json  Example.txt  Example2.txt  Example3.txt  Example4.txt  paras.h  (+4 more)
HardwareConfig/: app.py  config.json  main.py
Optimize/: Example.txt  config_project.py
gmp_pro/: .clang-format  .gitignore  .gitmodules  GMP.GeneralMotorPlatform.xml  LICENSE.txt  NOTICE  ctl_main.c  ctl_main.h  gmp_compiler_includes.txt  gmp_core.h  gmp_core.hpp  gmp_framework_config.json  install_gmp.bat  readme.md  release_clear.bat  two_axis_motor.h
gmp_pro/tools/gmp_sil/udp_helper_v2/mdl_asio_helper_linux/mex/mexUDP/: CMakeLists.txt  mdl_asio_helper.cpp
silworker/: README.md  heartbeat.py  remote_sil_worker.py  scheduler.py  scheduler_config.json  silworker_config.json  start_worker.bat
(+7653 files in other folders)
